DevOpsCheatsheets/k8s/prometheus-stack/example_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-prometheus-service
  namespace: nginx-ingress
  labels:
    app: nginx-ingress-prometheus-service
    release: monitoring
spec:
  ports:
    - port: 10254
      targetPort: 10254
      name: prometheus
      protocol: TCP
  selector:
    app: nginx-ingress-servicemonitor
