DevOpsCheatsheets/k8s/prometheus-stack/service-nginx-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-servicemonitor
  namespace: ingress-nginx
  labels:
    app: nginx-ingress-servicemonitor
spec:
  ports:
  - name: prometheus
    protocol: TCP
    port: 9113
    targetPort: 9113
  selector:
    app: nginx-ingress
